#191 adjust bug heading spacing

--- a/compass/src/_viewable_documentation.scss
+++ b/compass/src/_viewable_documentation.scss
@@ -165,6 +165,7 @@
                     padding: 3px 10px;
                     border-radius: 100000px;
                     font-weight: bold;
+                    line-height: 1.3em;
                 }
 
                 .bug_text {
